<?xml version="1.0" encoding="utf-8"?>

<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:stretchColumns="*"
        tools:context=".MainActivity">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TableRow

                android:layout_width="match_parent"
                android:layout_height="138dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/documents" />

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:adjustViewBounds="true"
                    android:background="@android:color/transparent"
                    android:paddingRight="0dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/menu" />
            </TableRow>
        </TableLayout>


        <TableLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_money"
                    android:textColor="#000000"
                    android:textSize="120sp"
                    />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_gravity="center_vertical"
                    android:text="Documents providing\nyour living expenses" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/address_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_address_card"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView21"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Recommendation letter\nissued by the head \nof your univ" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/check"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_check"
                    android:textColor="#000000"
                    android:textSize="120sp"
                    />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView60"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Documments that\nare an exchange student" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/cap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_cap"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView61"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Documents providing that \nyou have complete \nat least one semester" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/visa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_visa"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView62"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Visa Form" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/industry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_industry"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView63"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Photocopy of Business \nRegistration Certificate" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/envelope"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_envelope"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView64"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Standard Acceptance Letter" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/user"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_user"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView65"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Documents proving \nyour family relations" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_list"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView66"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Application Form" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_key"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView67"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Proof of Enrollment" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/bookmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_bookmark"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView68"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="Photocopy of passport" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border">


                <TextView
                    android:id="@+id/picture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/fa_picture"
                    android:textColor="#000000"
                    android:textSize="120sp" />

                <TextView
                    android:fontFamily="@font/ajn"
                    android:id="@+id/textView69"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="#000000"
                    android:text="One Standard size Photography" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</ScrollView>


